# fpga_sio

./: .gitattributes  .gitignore  LICENSE  README.md
MRMAC_block_automation/: .gitignore  readme.txt
TEF1001/: readme.txt
U200/: readme.txt
multiple_boards/: axi_stream_sink.vhd  axi_stream_source_fixed_data.vhd  boot_hw_device.sh  boot_hw_device.tcl  copy_bitstream.tcl  copy_bitstream_and_debug_probes.tcl  copy_bitstream_and_mask.tcl  copy_bitstream_mask_and_debug_probes.tcl  copy_device_image.tcl  copy_device_image_and_debug_probes.tcl  program_bitstream.bat  (+8 more)
software_tests/eclipse_project/source/: CMakeLists.txt  fpga_sio_pci_ids.h
software_tests/eclipse_project/source/cmac_ethernet/: CMakeLists.txt  cmac_axi4_lite_registers.h  cmac_configuration.c  cmac_link_control.c  cmac_register_access.c  cmac_register_access.h  cmac_statistics.c
software_tests/eclipse_project/source/crcmodel/: CMakeLists.txt  crcmodel.c  crcmodel.h
software_tests/eclipse_project/source/ddr_throughput/: CMakeLists.txt  axi_dma_interface.h  measure_ddr_throughput.c
software_tests/eclipse_project/source/dump_info/: CMakeLists.txt  display_physical_slots.c  display_vfio_information.c  dump_info.c  dump_info_libpciaccess.c  dump_info_pciutils.c  dump_pci_info.c  generic_pci_access.h  libpciaccess_pci_access.c  pcie_set_speed.c  pciutils_pci_access.c  vfio_pci_access.c
software_tests/eclipse_project/source/i2c_probe/: CMakeLists.txt  i2c_bit_banged.c  i2c_bit_banged.h  i2c_dump_info.c  i2c_probe.c  ltm4676a_access.c  ltm4676a_access.h  pmbus_access.c  pmbus_access.h  probe_results.txt  tef1001_fan_control.c  xilinx_axi_iic_host_interface.h
software_tests/eclipse_project/source/identify_pcie_fpga_design/: CMakeLists.txt  display_identified_pcie_fpga_designs.c  display_possible_fpga_designs.c  identify_pcie_fpga_design.c  identify_pcie_fpga_design.h
software_tests/eclipse_project/source/memmapped_tests/: CMakeLists.txt  bar_memory_mapping_notes.txt  memmapped_access_times.txt  memmapped_persistence.c  memmapped_persistence_libpciaccess.c  memmapped_persistence_vfio.c  time_dma_blkram.c  time_memmapped_libpciaccess.c
software_tests/eclipse_project/source/micromemory_5425_nvram/: CMakeLists.txt  bind_micromemory_5425_nvram_to_vfio.sh  nvram_utils.c  nvram_utils.h  test_nvram_access_notes.txt  test_nvram_csr_access.c  time_nvram_access_libpciaccess.c  time_nvram_access_vfio.c  umem.h
software_tests/eclipse_project/source/mrmac_ethernet/: CMakeLists.txt  mrmac_axi4_lite_registers.h  mrmac_configuration.c  mrmac_loopback_test.c  mrmac_loopback_test_notes.txt  mrmac_register_access.c  mrmac_register_access.h  mrmac_statistics.c  mrmac_switch_test.c  mrmac_switch_test_notes.txt
software_tests/eclipse_project/source/nite_or_lite_fury_tests/: CMakeLists.txt  flash_m2_led.c  fury_utils.c  fury_utils.h  multiprocess_notes.txt  test_ddr.c  test_ddr_notes.txt  test_general.c  test_general.txt  test_general_primary.c  test_general_secondary.c  test_primary.c  time_dma_blkram.c  xilinx_dma_registers.h
software_tests/eclipse_project/source/probe_xilinx_ip/: CMakeLists.txt  probe_xilinx_ip.c
software_tests/eclipse_project/source/qsfp_management/: CMakeLists.txt  cms_qsfp_management_menu.c  direct_iic_qsfp_management_menu.c  qsfp_management_menu.c
software_tests/eclipse_project/source/sealevel_serial_7205e/: CMakeLists.txt  bind_sealevel_serial_to_vfio.sh  bind_sealevel_serial_to_vfio_noiommu.sh  pex8311.c  pex8311.h  pex8311_enable_above_4GB_dma.c  sealevel_serial_7205e_uart_tests.c  serial_reg.h  time_pex8311_shared_memory_libpciaccess.c  time_pex8311_shared_memory_notes.txt  uart_test_notes.txt
software_tests/eclipse_project/source/serial_ports/: CMakeLists.txt  identify_uarts.c  identify_uarts_notes.txt
software_tests/eclipse_project/source/sfp_management/: CMakeLists.txt  sfp_management_menu.c
software_tests/eclipse_project/source/vfio_access/: CMakeLists.txt  pci_sysfs_access.c  pci_sysfs_access.h  transfer_timing.c  transfer_timing.h  vfio_access.c  vfio_access.h  vfio_access_private.h  vfio_bitops.h  vfio_multi_process_manager.c
software_tests/eclipse_project/source/xilinx_axi_iic/: CMakeLists.txt  xilinx_axi_iic_host_interface.h  xilinx_axi_iic_transfers.c  xilinx_axi_iic_transfers.h
software_tests/eclipse_project/source/xilinx_axi_stream_switch/: CMakeLists.txt  xilinx_axi_stream_switch.c  xilinx_axi_stream_switch.h  xilinx_axi_stream_switch_configure.c  xilinx_axi_stream_switch_configure.h  xilinx_axi_stream_switch_set_routing.c
software_tests/eclipse_project/source/xilinx_cms_subsystem/: CMakeLists.txt  cms_notes.txt  xilinx_cms.c  xilinx_cms.h  xilinx_cms_host_interface.h  xilinx_cms_time_averaging.c
software_tests/eclipse_project/source/xilinx_dma_bridge_for_pcie/: CMakeLists.txt  crc64.h  crc64_stream_latency.c  ddr3_reset_control.c  test_dma_accessible_memory.c  test_dma_accessible_memory_notes.txt  test_dma_bridge.c  test_dma_bridge_independent_streams.c  test_dma_bridge_memory_addressing.c  test_dma_bridge_notes.txt  test_dma_bridge_parallel_streams.c  test_dma_descriptor_credits.c  xilinx_dma_bridge_host_interface.h  xilinx_dma_bridge_transfers.c  xilinx_dma_bridge_transfers.h
software_tests/eclipse_project/source/xilinx_embeddedsw/: CMakeLists.txt  bspconfig.h  xparameters.h  xpseudo_asm.h
software_tests/eclipse_project/source/xilinx_qdma_for_pcie/: CMakeLists.txt  qdma_pf_registers.h  qdma_transfers.c  qdma_transfers.h
software_tests/eclipse_project/source/xilinx_quad_spi/: CMakeLists.txt  parse_bitstream_file.c  quad_spi_flasher.c  quad_spi_flasher_results.txt  xilinx_7_series_bitstream.c  xilinx_7_series_bitstream.h  xilinx_bit_to_bin.c  xilinx_quad_spi.c  xilinx_quad_spi.h  xilinx_quad_spi_host_interface.h
software_tests/eclipse_project/source/xilinx_sensors/: CMakeLists.txt  display_sensor_values.c  xilinx_sysmon.c  xilinx_sysmon.h  xilinx_sysmon_host_interface.h  xilinx_xadc.c  xilinx_xadc_host_interface.h
software_tests/eclipse_project/source/xilinx_xadc/: CMakeLists.txt  display_xadc_values.c  xilinx_xadc.c  xilinx_xadc.h  xilinx_xadc_host_interface.h
(+403 files in other folders)
